# TTS_MultiModel

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_REFERENCE_REPOS_ANALYSIS.md  Gradio_6x_语法与避坑指南.md  LICENSE  README.md  UX_ISSUES.md  UX_UI_EVALUATION_REPORT.md  browser_test_report_v2.md  cleanup_cache.bat  cleanup_reference_repos.bat  comprehensive_verify.py  config.yaml  docker-compose.yml  download_models.py  generation_times.json  inspect_cards.py  install.bat  install.sh  interactive_verify.py  log.txt  multi_page_style_compare.py  prototype-minimal.html  prototype-v2-fusion.html  prototype-v2-taskflow.html  prototype-v2-workbench.html  prototype-v4-complete.html  pyproject.toml  requirements.txt  responsive_verify.py  start.bat  start.sh  style_compare.py  test_db.py  test_stream.html  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
.trae/documents/: full-test-and-icon-fix-plan.md  round3-full-browser-test-plan.md  tts-browser-test-plan.md
WPy64-312101/python/Scripts/: get_gprof  get_objgraph  jp.py  numba  pygrun  undill
WPy64-312101/settings/.spyder-py3/: workingdir
data/: history_records.json.migrated
docs/: ADJUSTABLE_PARAMETERS.md  COMMON_PARTS_ANALYSIS_REPORT_AI.md  COMPARISON_REPORT_OFFICIAL_VS_CUSTOM.md  DEEP_DIFF_ANALYSIS_REPORT.md  DIALECT_SUPPORT_PLAN.md  EDGE_DEPLOYMENT_PLAN.md  IMPROVEMENT_GUIDEBOOK.md  INDEXTTS2_INTEGRATION_GUIDE.md  ISSUE_ANALYSIS.md  MODEL_DOWNLOAD_GUIDE.md  MODEL_EXTENSION_GUIDE.md  MODEL_TIERING_PLAN.md  MULTI_SPEAKER_PLAN.md  OPENAI_COMPATIBLE_API.md  PROJECT_ARCHITECTURE.md  RL_ALIGNMENT_PLAN.md  SPEC_optimization.md  TECHNICAL_ANALYSIS_REPORT.md  TECHNICAL_AUDIT_REPORT_11D.md  TENSORRT_INTEGRATION_PLAN.md  TOGGLE_SWITCH_DESIGN.md  TRAINING_TOOLCHAIN_PLAN.md  UI开发指南_README.md  browser_test_report.md
docs/archived-prototypes/: preview_theme_selector.html  prototype-compact.html  prototype-dashboard.html  prototype-v2-cards.html  prototype-v2-ide.html  tts_multimodel_replica.html  yuanbao_html_20260718_mZeher.html
docs/reports/: FINAL_CONSISTENCY_REPORT.md  comprehensive_report.md  interactive_report.md  multi_page_style_report.md  report.md  responsive_report.md  style_compare_report.md
docs/research/: voxcpm_comparison_analysis.md  voxcpm_github_report.md  voxcpm_huggingface_report.md  voxcpm_official_website_report.md
examples/: README.md  api_example.py  batch_example.py  clone_example.py
faster-qwen3-tts-main/faster_qwen3_tts/: generate.py  model.py  sampling.py
personas/: gf1.pt  gf1.txt  南宫婉.pt  南宫婉.txt  小林.pt  小林.txt  御姐.pt  御姐.txt  旁白.pt  旁白.txt  李老师.pt  李老师.txt  韩立.pt  韩立.txt
scripts/: download_indextts2.py  sync_requirements.py  test_sse.py  train_voxcpm_finetune.py  validate_i18n.py  启动控制台.ps1
tests/: conftest.py  test_app.py  test_audio_processing.py  test_auth.py  test_auth_integration.py  test_bin_integration.py  test_bin_system_enhancements.py  test_cache.py  test_config.py  test_config_models.py  test_csrf_integration.py  test_engine_switch.py  test_exceptions.py  test_generation.py  test_gpu_utilization_routes.py  test_gpu_utils.py  test_history_db.py  test_i18n.py  test_path_traversal.py  test_progress.py  test_prompt_cache.py  test_security.py  test_sse.py
tests/benchmarks/: test_generation_bench.py
