[project]
name = "tts-multimodel"
version = "2.0.0"
description = "TTS MultiModel - VoxCPM2 based Text-to-Speech application"
requires-python = ">=3.10"
dependencies = [
    # === 深度学习框架（版本必须匹配：torch 2.5.x -> torchvision 0.20.x -> torchaudio 2.5.x）===
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "transformers>=4.57.0",
    "tokenizers>=0.19.0",
    # === AI 生态 ===
    "funasr>=1.0.0",
    "modelscope>=1.9.0",
    # === Web 框架 ===
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    # === 音频处理 ===
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    # === 数值计算 ===
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # === 工具库 ===
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0",
    "cryptography>=41.0.0",
    # === 数据校验 ===
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.0"]

[project.scripts]
tts-multimodel = "integrated_app.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["bin"]

[tool.setuptools.package-data]
"integrated_app" = ["templates/**/*", "static/**/*", "locales/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["bin/integrated_app", "tests", "scripts"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.git",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.per-file-ignores]
"bin/clean_launch.py" = ["E402", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["integrated_app"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = false
show_error_codes = true
disable_error_code = ["annotation-unchecked"]
exclude = [
    "tests/e2e",
    "node_modules",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: integration tests requiring GPU",
    "benchmark: performance benchmark tests",
]

[tool.coverage.run]
source = ["bin/integrated_app"]
omit = ["*/tests/*", "*/templates/*", "*/static/*"]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass",
]
